<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PermissionModeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="@color/colorCardViewBgGray"
        app:layout_constraintBottom_toTopOf="@id/cv_fake_config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp">

            <RadioButton
                android:id="@+id/rb_allow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restrict_mode_allow" />

            <RadioButton
                android:id="@+id/rb_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restrict_mode_default" />

            <RadioButton
                android:id="@+id/rb_deny"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restrict_mode_deny" />

            <RadioButton
                android:id="@+id/rb_allow_but_null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restrict_mode_allow_but_null" />

            <RadioButton
                android:id="@+id/rb_allow_but_fake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restrict_mode_allow_but_fake" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_fake_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="@color/colorCardViewBgGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_config">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fake_config"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>